--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -5,23 +5,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,600;1,600&display=swap');
 
 // Color system
-$px-theme:                      #212121; //#ea2340;
-$px-body-color:                 #212121;
+$px-theme: #212121; //#ea2340;
+$px-body-color: #212121;
 
-$px-theme-dark:                 #212121;
-$px-black:						#000000 !default; 
-$px-white:						#ffffff !default;
-$px-dark:						#212121 !default;
-$px-medium-dark:				#4A4B48 !default;
-$px-gray:						#f0f1f2 !default;
-$px-light-gray:					#f3f3f3 !default;
-$px-dark-bg:                    #1F252A;
-$px-zalora:                     #262626;
-$px-esplanade:                  #732066;
-$px-openpo:                     #FFD300;
-$px-huemail:                    #01a3d4;
-$px-autodesk:                   #87bc40;
-$px-workspace:                  #4DDBDD;
+$px-theme-dark: #212121;
+$px-black: #000000 !default;
+$px-white: #ffffff !default;
+$px-dark: #212121 !default;
+$px-medium-dark: #4A4B48 !default;
+$px-gray: #f0f1f2 !default;
+$px-light-gray: #f3f3f3 !default;
+$px-dark-bg: #1F252A;
+$px-zalora: #262626;
+$px-esplanade: #732066;
+$px-openpo: #FFD300;
+$px-huemail: #01a3d4;
+$px-autodesk: #87bc40;
+$px-workspace: #93F6E3;
 
 // $px-zalora:                     #6667ab;
 // $px-esplanade:                  #6667ab;
@@ -33,17 +33,17 @@ $px-workspace:                  #4DDBDD;
 
 
 // Font
-$px-base-font:					1rem !default;
-$px-h1-font:                	4.5rem !default;
-$px-h2-font:                	3.5rem !default;
-$px-h3-font:                	2rem !default;
-$px-h4-font:                	1.6rem !default;
-$px-h5-font:                	1rem !default;
-$px-h6-font:                	.75rem !default;
+$px-base-font: 1rem !default;
+$px-h1-font: 4.5rem !default;
+$px-h2-font: 3.5rem !default;
+$px-h3-font: 2rem !default;
+$px-h4-font: 1.6rem !default;
+$px-h5-font: 1rem !default;
+$px-h6-font: .75rem !default;
 
-$px-top-heading-weight:         300;
-$px-h5-h6-font-weight:          700;
-$px-body-weight:                400;
+$px-top-heading-weight: 300;
+$px-h5-h6-font-weight: 700;
+$px-body-weight: 400;
 
 // $px-font-family:				 'IBM Plex Sans', sans-serif;// Main Font Family
 // $px-font-alt:					 'IBM Plex Sans', sans-serif;// Main Font Family
@@ -51,14 +51,14 @@ $px-body-weight:                400;
 // $px-heading-font-family:         'IBM Plex Sans', sans-serif; // Heading Font Family
 // $px-display-font-family:         'Permanent Marker', cursive;
 
-$px-font-family:				 'Montserrat', sans-serif;// Main Font Family
-$px-font-alt:					 'Montserrat', sans-serif;// Main Font Family
+$px-font-family: 'Montserrat', sans-serif; // Main Font Family
+$px-font-alt: 'Montserrat', sans-serif; // Main Font Family
 
-$px-heading-font-family:         'Montserrat', sans-serif; // Heading Font Family
-$px-display-font-family:         'Open Sans', sans-serif;
+$px-heading-font-family: 'Montserrat', sans-serif; // Heading Font Family
+$px-display-font-family: 'Open Sans', sans-serif;
 
 // Breakpoints
-$px-media-xsm:					567px !default;
-$px-media-sm:					767px !default;
-$px-media-md:					991px !default;
-$px-media-lg:					1200px !default;
+$px-media-xsm: 567px !default;
+$px-media-sm: 767px !default;
+$px-media-md: 991px !default;
+$px-media-lg: 1200px !default;
