--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -3,11 +3,12 @@
 
 @keyframes lds-dual-ring {
 	0% {
-		transform: rotate(0deg); 
+		transform: rotate(0deg);
 	}
-  	100% {
-  		transform: rotate(360deg); 
-  	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 
@@ -16,54 +17,64 @@
 .blog-grid {
 	.blog-grid-img {
 		overflow: hidden;
+
 		img {
 			@include transition(ease all 0.85s);
 			@include scale(1);
 		}
 	}
+
 	.blog-gird-info {
-	    padding: 15px 0 0;
+		padding: 15px 0 0;
 	}
+
 	h5 {
-	    margin: 0;
-	    padding: 10px 0 15px;
-	    font-size: 22px;
-	    font-weight: 600;
+		margin: 0;
+		padding: 10px 0 15px;
+		font-size: 22px;
+		font-weight: 600;
 		color: $px-dark;
+
 		a {
 			color: $px-dark;
+
 			&:hover {
 				color: $px-theme;
 			}
 		}
 	}
+
 	p {
 		margin: 0;
 		font-size: 15px;
 	}
+
 	.b-meta {
 		span {
 			font-size: 12px;
 			color: $px-body-color;
 			line-height: 15px;
 		}
+
 		.meta {
-	        display: inline-block;
-		    border-left: 1px solid #ddd;
-		    line-height: 15px;
-		    margin: 0 0 0 6px;
-		    padding: 0 0 0px 6px;
+			display: inline-block;
+			border-left: 1px solid #ddd;
+			line-height: 15px;
+			margin: 0 0 0 6px;
+			padding: 0 0 0px 6px;
 		}
 	}
+
 	.btn-grid {
 		margin-top: 15px;
 	}
+
 	&:hover {
 		.blog-grid-img {
 			img {
 				@include scale(1.1);
 			}
-		}	
+		}
 	}
 }
 
@@ -71,12 +82,14 @@
 --------------------*/
 .contact-form {
 	padding: 5%;
+
 	.form-control {
-	    height: 45px;
-	    font-size: 14px;
-	    border-radius: 0;
-	    box-shadow: none !important;
-	}	
+		height: 45px;
+		font-size: 14px;
+		border-radius: 0;
+		box-shadow: none !important;
+	}
+
 	textarea.form-control {
 		height: 150px;
 	}
@@ -86,16 +99,19 @@
 -----------------------*/
 .work-thumbnail {
 	border-radius: 1px;
-	&:hover{
+
+	&:hover {
 		cursor: pointer;
 	}
 }
-.project-header{
+
+.project-header {
 	margin-top: -2rem;
 	margin-bottom: 2rem;
+
 	h1 {
 		display: inline;
-		background-image: linear-gradient(rgba(234,35,64,0.3), rgba(234,35,64, 0.3));
+		background-image: linear-gradient(rgba(234, 35, 64, 0.3), rgba(234, 35, 64, 0.3));
 		background-size: 100% 10%;
 		background-repeat: no-repeat;
 		background-position: 0 bottom;
@@ -106,39 +122,40 @@
 }
 
 .project-img {
-    position: relative;
-    display: inline-block;
-    margin: 0 0 35px 0;
-    -webkit-perspective: 2000px;
-    -moz-perspective: 2000px;
-    perspective: 2000px;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d
+	position: relative;
+	display: inline-block;
+	margin: 0 0 35px 0;
+	-webkit-perspective: 2000px;
+	-moz-perspective: 2000px;
+	perspective: 2000px;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d
 }
 
 .project-img-depth {
 	display: block;
-    position: relative;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d
+	position: relative;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d
 }
 
 .project-img-depth img:first-child {
-    border-radius: 16px;
+	border-radius: 16px;
 }
 
 .project-img-depth img:nth-child(2) {
-    position: absolute;
-    top: 0;
+	position: absolute;
+	top: 0;
 	left: 0;
+
 	@media (min-width: 576px) {
 		-webkit-transform: scale(.775) translateZ(150px);
 		-moz-transform: scale(.775) translateZ(150px);
 		transform: scale(.775) translateZ(150px);
 	}
-    
+
 }
 
 .badge {
@@ -153,11 +170,11 @@
 
 .icon {
 	display: inline-block;
-    width: 2em;
+	width: 2em;
 	height: 2em;
-    stroke-width: 0;
-    stroke: currentColor;
-    fill: currentColor;
+	stroke-width: 0;
+	stroke: currentColor;
+	fill: currentColor;
 }
 
 .read-more-link {
@@ -165,10 +182,12 @@
 		width: 1.5rem;
 		height: 1.5rem;
 	}
+
 	&:hover {
 		border-bottom: 2px solid;
 		text-decoration: none;
 	}
+
 	text-decoration: none;
 }
 
@@ -176,19 +195,38 @@
 	@media (min-width: 576px) {
 		width: 61.8%;
 	}
+
 	width: 90%;
 }
 
 .bullet-icon {
 	margin: 3rem 0 1rem;
 }
-.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+.embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /* ----- Esplanade --- */
 
 #esplanade_project_overview {
 	background-image: url('../img/esplanade/esplanade_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width: 576px) {
 		background-image: url('../img/esplanade/esplanade_bg.png');
 	}
@@ -197,14 +235,25 @@
 #zalora_project_overview {
 	background-image: url('../img/zalora/zalora_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width: 576px) {
 		background-image: url('../img/zalora/zalora_bg.png');
+	}
+}
+
+#zalora_app_project_overview {
+	background-image: url('../img/zalora-app/zalora_app_bg_sm.png');
+	background-size: cover;
+
+	@media (min-width: 576px) {
+		background-image: url('../img/zalora-app/zalora_app_bg.png');
 	}
 }
 
 #autodesk_project_overview {
 	background-image: url('../img/autodesk/autodesk_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width: 576px) {
 		background-image: url('../img/autodesk/autodesk_bg.png');
 	}
@@ -213,6 +262,7 @@
 #huemail_project_overview {
 	background-image: url('../img/huemail/huemail_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width: 576px) {
 		background-image: url('../img/huemail/huemail_bg.png');
 	}
@@ -221,6 +271,7 @@
 #openpo_project_overview {
 	background-image: url('../img/openpo/openpo_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width: 576px) {
 		background-image: url('../img/openpo/openpo_bg.png');
 	}
@@ -229,6 +280,7 @@
 #workspace_project_overview {
 	background-image: url('../img/workspace/workspace_bg_sm.png');
 	background-size: cover;
+
 	@media (min-width:576px) {
 		background-image: url('../img/workspace/workspace_bg.png');
 	}
