--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -18,7 +18,8 @@ $px-light-gray: #f3f3f3 !default;
 $px-dark-bg: #1F252A;
 $px-zalora: #262626;
 $px-esplanade: #732066;
-$px-openpo: #FFD300;
+//$px-openpo: #FFD300;
+$px-openpo: #FDDD86;
 $px-huemail: #01a3d4;
 $px-autodesk: #87bc40;
 $px-workspace: #93F6E3;
