--- a/static/style/scss/color.scss
+++ b/static/style/scss/color.scss
@@ -46,7 +46,7 @@
 }
 
 .workspace-bg {
-	background-color: $px-workspace !important;
+	background-color: rgba($px-workspace, 0.3) !important;
 }
 
 
