--- a/static/style/scss/timeline.scss
+++ b/static/style/scss/timeline.scss
@@ -51,7 +51,7 @@
 
 .timeline-steps .timeline-content .inner-circle:before {
     content: "";
-    background-color: #CC8FF7;
+    background-color: #FF8C21;
     display: inline-block;
     height: 3rem;
     width: 3rem;
