--- a/static/style/scss/variable.scss
+++ b/static/style/scss/variable.scss
@@ -22,7 +22,7 @@ $px-esplanade: #732066;
 $px-openpo: #FDDD86;
 $px-huemail: #01a3d4;
 $px-autodesk: #87bc40;
-$px-workspace: #93F6E3;
+$px-workspace: #004260;
 
 // $px-zalora:                     #6667ab;
 // $px-esplanade:                  #6667ab;
